Some Services done

--- a/Iconic.Api/appsettings.json
+++ b/Iconic.Api/appsettings.json
@@ -2,8 +2,48 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=195.158.4.218; Port=5432; Database=IconicDb; Username=postgres; Password=root;"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Debug"
+      }
+    },
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/RestApiLog.log",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 4194304,
+          "retainedFileCountLimit": 15,
+          "rollingInterval": "Minute"
+        }
+      }
+    ]
+  },
+  "JWT": {
+    "Secret": "3249f3f0-8b1e-4ebb-a8ee-1e40b0e90034",
+    "ValidIssuer": "iconic.server",
+    "ValidAudience": "http://localhost:52913/"
+  }
 }
