Gallery and News service and controller created

--- a/Iconic.Service/Iconic.Service.csproj
+++ b/Iconic.Service/Iconic.Service.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Iconic.Domain\Iconic.Domain.csproj" />
+    <ProjectReference Include="..\Iconic.Data\Iconic.Data.csproj" />
   </ItemGroup>
 
 </Project>
