--- a/Iconic.Service/Iconic.Service.csproj
+++ b/Iconic.Service/Iconic.Service.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<Folder Include="Services\Courses\" />
     <Folder Include="Services\Disscussions\" />
     <Folder Include="Services\Forums\" />
     <Folder Include="Services\Quizes\" />
@@ -13,11 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Iconic.Data\Iconic.Data.csproj" />
     <ProjectReference Include="..\Iconic.Domain\Iconic.Domain.csproj" />
   </ItemGroup>
 
